Bug 1264157 - Do not match disabled/readonly inputs with :in-range and :out-of-range. r=bz